Fix: 수정 gap 클래스에 대한 조건 변경
- margin-left: 4px 삭제
- gap 클래스인 경우 공백 문자로 시작

Refs: #11

--- a/src/pages/TextEditor/TextEditor.module.css
+++ b/src/pages/TextEditor/TextEditor.module.css
@@ -16,10 +16,6 @@
   outline: none;
 }
 
-.gap {
-  margin-left: 4px;
-}
-
 .link {
   outline: none;
   /* border: 1px solid cornflowerblue; */
